components set and path changed

--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,8 @@
     <title>Students DB test application</title>
     <meta name="author" content="bushikot@gmail.com">
     <meta name="description" content="Students DB test application">
-    <link href="../vendor/twitter/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="../vendor/eonasdan/bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <link href="components/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="components/bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -105,11 +105,11 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="../vendor/components/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="../vendor/moment/moment/min/moment.min.js"></script>
-    <script type="text/javascript" src="../vendor/moment/moment/locale/ru.js"></script>
-    <script type="text/javascript" src="../vendor/twitter/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../vendor/eonasdan/bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+    <script type="text/javascript" src="components/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="components/moment/min/moment.min.js"></script>
+    <script type="text/javascript" src="components/moment/locale/ru.js"></script>
+    <script type="text/javascript" src="components/bootstrap/bootstrap-built.js"></script>
+    <script type="text/javascript" src="components/bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 
     <script type="text/javascript">
         var fname, lname, groupnumber, birthday, email, student_list, student_additional_data, my_modal,
